# Gwidi

./: .gitignore  .gitmodules  README.md  aot_theme_1.gwm  auto_save.gwm.tmp  bobomb_battlefield.gwm  cantina.gwm  eb_eight_melodies.gwm  editor_v2.py  imperial_march.gwm  indiana_jones.gwm  main.py  midi_editor.py  music.py  prefs.json  requirements.txt  scale_test.gwm  test.gwm  test_2.gwm  threed.gwm  undertale_undertale.gwm  ut_determination.gwm  ut_glamour_battle.gwm
assets/midi_test/: EarthBound - Pokey Means Business (Arrangement)_1632424033937.mid  EarthBound - Pollyanna.mid_1632424030162.mid  EarthBound Store Theme_1632424107228.mid  Final Fantasy Victory Fanfare_1632387761008.mid  Harry potter theme song (hedwigs theme)_1632548882284.mid  Indiana Jones_1632389274257.mid  Maplestory BGM - Kerning City_1632387636133.mid  Megalovania_ Undertale Sans Theme song during fight. Piano version remade by ben._1632388078091.mid  One Punch Man (Saitama's Theme)_1632387229563.mid  Plantation [Cave Story] (G Major)_1632388319479.mid  Single Player Menu - Mario Kart DS_1632409661987.mid  Star Wars - Cantina Theme2_1632388511163.mid  Star Wars - Imperial March_1632388875429.mid  Star wars theme by JeyWulf_1632389190293.mid  Stardew Valley Overture (VIBRA v2)_1632415284611.mid  The Legend of Zelda Ocarina of Time - Song of Storms.mid_1632387234713.mid  The simpsons theme_1632631982771.mid  hm.mid  test.mid  test2.mid
gwidi_sfml/: CMakeLists.txt  main.cc
gwidi_sfml/data/: Base.h  Constants.cc  Constants.h  DataManager.cc  DataManager.h  Measure.cc  Measure.h  MeasureGrid.cc  MeasureGrid.h  Note.cc  Note.h  Slot.cc  Slot.h
gwidi_sfml/events/: GlobalMouseEventHandler.cc  GlobalMouseEventHandler.h  ThreadPool.cc  ThreadPool.h
gwidi_sfml/gui/: ControlBar.cc  ControlBar.h  LayoutManager.cc  LayoutManager.h  ScrubBar.cc  ScrubBar.h  UiButton.cc  UiButton.h
gwidi_sfml/playback/: PlaybackManager.cc  PlaybackManager.h
macros/: key_macros.py
midi_editor/: editor_v3.py  event_queue.py  gwidi_data.py  macro_manager.py  measures_display.py  midi_importer.py  play_manager.py  prefs.json  thread_pool.py
songs/: song_base.py  song_ff_fanfare.py  song_gatos_song.py  song_pollyanna.py  song_power_of_love_harp.py
